[metadata]
name = graffiti
summary = Cloud Capability Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    graffiti

[entry_points]
graffiti.drivers =
    local = graffiti.drivers.local:LocalResourceDriver
    glance = graffiti.drivers.glance:GlanceResourceDriver
    nova = graffiti.drivers.nova:NovaResourceDriver
    cinder = graffiti.drivers.cinder:CinderResourceDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = graffiti/locale
domain = graffiti

[update_catalog]
domain = graffiti
output_dir = graffiti/locale
input_file = graffiti/locale/graffiti.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = graffiti/locale/graffiti.pot
